--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "make-your-burguer",
+  "name": "make_your_burger",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,14 +8,20 @@
     "backend": "json-server --watch db/db.json"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "json-server": "^0.17.0",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "core-js": "^3.6.5",
+    "json-server": "^0.16.3",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
-  }
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
